src/test/ui/issue-30730.stderr
error: unused import: `std::thread`
  --> $DIR/issue-30730.rs:13:5
   |
LL | use std::thread;
   |     ^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/issue-30730.rs:12:9
   |
LL | #![deny(warnings)]
   |         ^^^^^^^^
   = note: #[deny(unused_imports)] implied by #[deny(warnings)]

error: aborting due to previous error

